--- a/baras/package.json
+++ b/baras/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -42,6 +43,5 @@
   },
   "devDependencies": {
     "redux-logger": "^3.0.6"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
