--- a/backendBaras/.env
+++ b/backendBaras/.env
@@ -3,5 +3,5 @@ DB_USERNAME=barasuser
 DB_PASSWORD=pass
 DB_DATABASE=baras
 DB_HOST=localhost
-JWT_SECRET=secret
+JWT_SECRET=secrets
 JWT_EXPIRES_IN=900000
